# raw-bytes

./: Cargo.toml  README.md
.github/workflows/: ci.yml  mft.yml  mft_api.yml  mft_derive.yml  mtf.yml  mtf_api.yml  packed_bits.yml  packed_bits_container.yml  packed_struct_container.yml  packed_structs.yml  raw_bytes_container.yml
mtf/: Cargo.toml  README.md
mtf/src/: lib.rs
mtf_api/: Cargo.toml  README.md
mtf_api/src/: dynamic.rs  lib.rs
mtf_derive/: Cargo.toml  README.md
mtf_derive/src/: lib.rs
packed_bits/: Cargo.toml  README.md
packed_bits/examples/: packed_bits.rs
packed_bits/src/: error.rs  lib.rs
packed_bits_container/: Cargo.toml  README.md
packed_bits_container/examples/: flags.rs  packed_bits_container.rs  packed_bits_container_full.rs
packed_bits_container/src/: flags.rs  lib.rs
packed_struct_container/: Cargo.toml  README.md
packed_struct_container/examples/: packed_structs.rs
packed_struct_container/src/: lib.rs
packed_structs/: Cargo.toml  Cargo.toml.bak  README.md
packed_structs/src/: lib.rs
pak/: Cargo.toml
pak/src/: asset.rs  builder.rs  lib.rs  main.rs  reader.rs
pak/src/format/: constants.rs  error.rs  hash.rs  header.rs  mod.rs  toc.rs
raw-bytes/: Cargo.toml  README.md
raw-bytes/examples/: full_workflow.rs  in_memory.rs  mmap_read_only.rs
raw-bytes/src/: error.rs  lib.rs  main.rs
raw_bytes_container/: Cargo.toml  README.md
raw_bytes_container/examples/: full_workflow.rs  in_memory.rs  mmap_read_only.rs  mmap_read_write.rs
raw_bytes_container/src/: container.rs  error.rs  lib.rs  (+2 more)
save/: Cargo.toml
(+7 files in other folders)
